--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                             <a href="#"><i class="ti-heart text-danger"></i> 234</a>
                             <a href="#"><i class="ti-comment"></i> 123</a>
                         </p>
-                        <p><b>ICT Training to a school in Logologo, marsabit.</b></p>
+                        <p><b>ICT Training to a school in Logologo, Marsabit.</b></p>
                         
                         <p>Recently conducted an ICT project in Logologo. 10 schools attended the training having a total of 30 teachers. Teachers were trainined on how to use technological devices to make learbing easy and fun in the classroom using a projector, tablets, Intel CAP, and a computer provided by the Government of kenya.</p>
 
@@ -637,7 +637,7 @@
                         </p>
                         <p><b>Creating a website for nurses</b></p>
                         
-                        <p> Proud to have developed a website where nurses from Africa can easily apply for jobs in europe. <a href="http://www.contextofcare.co.uk">www.contextofcare.co.uk/<i></a> The code is available on request.</i></p>
+                        <p> Proud to have developed a website where nurses from Africa can easily apply for jobs in europe. <a href="http://www.contextofcare.co.uk">www.contextofcare.co.uk<i></a> The code is available on request.</i></p>
 
                         <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
